# qt-vision

./: demo02.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  run.bash
camera/: cameracrl.cpp  cameracrl.h
image/stylesheet/: stylesheet.qss
measure/: CMakeLists.txt  getlen.cpp  getlen.h  measure.cpp  measure.h  param.h  solution.cpp  solution.h  standard.cpp  standard.h
titlebar/: maintitlebar.cpp  maintitlebar.ui
